// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`screen: Nav/ActionBar displays network 1`] = `
.emotion-0 {
  width: 100%;
  background: #F8F8F8;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 24px;
}

.emotion-1 {
  width: 70%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  z-index: 5000;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-right: 16px;
}

.emotion-2 .MuiInputBase-root {
  width: 100%;
  background: #FFFFFF;
  padding: 3.2px 9.6px;
  border-radius: 4px;
}

.emotion-2 .MuiInputBase-input {
  text-overflow: ellipsis;
}

.emotion-2 .MuiInputBase-input::-webkit-input-placeholder {
  color: #999999;
}

.emotion-2 .MuiInputBase-input::-moz-placeholder {
  color: #999999;
}

.emotion-2 .MuiInputBase-input:-ms-input-placeholder {
  color: #999999;
}

.emotion-2 .MuiInputBase-input::placeholder {
  color: #999999;
}

.emotion-2.open .MuiInputBase-root {
  background: #F8F8F8;
}

.emotion-3 {
  font-size: 1rem;
  white-space: pre-wrap;
  letter-spacing: 0.5px;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  line-height: 1.4375em;
  color: #000000;
  box-sizing: border-box;
  position: relative;
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3.Mui-disabled {
  color: rgba(0, 0, 0, 0.38);
  cursor: default;
}

.emotion-3 {
  border-radius: 12px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 0.01em;
  max-height: 2em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: rgba(0, 0, 0, 0.54);
  margin-right: 8px;
}

.emotion-5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.25rem;
}

.emotion-6 {
  font: inherit;
  letter-spacing: inherit;
  color: currentColor;
  padding: 4px 0 5px;
  border: 0;
  box-sizing: content-box;
  background: none;
  height: 1.4375em;
  margin: 0;
  -webkit-tap-highlight-color: transparent;
  display: block;
  min-width: 0;
  width: 100%;
  -webkit-animation-name: mui-auto-fill-cancel;
  animation-name: mui-auto-fill-cancel;
  -webkit-animation-duration: 10ms;
  animation-duration: 10ms;
}

.emotion-6::-webkit-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-6::-moz-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-6:-ms-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-6::-ms-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-6:focus {
  outline: 0;
}

.emotion-6:invalid {
  box-shadow: none;
}

.emotion-6::-webkit-search-decoration {
  -webkit-appearance: none;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-6::-webkit-input-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-6::-moz-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-6:-ms-input-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-6::-ms-input-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-6:focus::-webkit-input-placeholder {
  opacity: 0.42;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-6:focus::-moz-placeholder {
  opacity: 0.42;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-6:focus:-ms-input-placeholder {
  opacity: 0.42;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-6:focus::-ms-input-placeholder {
  opacity: 0.42;
}

.emotion-6.Mui-disabled {
  opacity: 1;
  -webkit-text-fill-color: rgba(0, 0, 0, 0.38);
}

.emotion-6:-webkit-autofill {
  -webkit-animation-duration: 5000s;
  animation-duration: 5000s;
  -webkit-animation-name: mui-auto-fill;
  animation-name: mui-auto-fill;
}

.emotion-6 {
  padding: 8px 12px;
}

.emotion-7 {
  margin-right: 16px;
}

.emotion-7.open {
  background: #F8F8F8;
}

.emotion-8 {
  opacity: 0;
  visibility: hidden;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  position: fixed;
  right: 60px;
  background: #E8E8E8;
  width: 310px;
  height: 310px;
  top: 69.6px;
  right: 55px;
  opacity: 20%;
  z-index: 1;
  border-radius: 8px;
  overflow: auto;
}

.emotion-8.emotion-8 {
  overflow: auto;
  padding: 16px;
  border-radius: 4px;
  background: #FFFFFF;
}

.emotion-8.open {
  opacity: 1;
  visibility: visible;
  background: #E8E8E8;
  border-radius: 8px;
}

@media (min-width:1280px) {
  .emotion-8 {
    right: 120px;
  }
}

.emotion-9 {
  height: 124px;
  border-radius: 8px;
  background-color: #E8E7E8;
  margin-top: 8px;
}

.emotion-10 {
  vertical-align: middle;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-11 {
  padding: 16px 0px 0px 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-12 {
  width: 28px;
  height: 28px;
  min-width: 28px;
  min-height: 28px;
  border-radius: 50%;
  overflow: hidden;
  background: #F8F8F8;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 45px;
  width: 45px;
}

.emotion-12 img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center center;
}

.emotion-13 {
  height: 12.4px;
  width: 12.4px;
  background-color: #E8E7E8;
  border-radius: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  left: 73px;
  top: 38px;
}

.emotion-14 {
  height: 10.4px;
  width: 10.4px;
  background-color: #29CC6A;
  border-radius: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  left: 74px;
  top: 39px;
}

.emotion-15 {
  padding: 20px 0px 0px 8px;
  font-size: 14px;
  font-weight: 590;
  line-height: 17px;
  color: #000000;
  overflow: auto;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow-wrap: anywhere;
  max-height: 70px;
}

.emotion-16 {
  margin: 0;
  font-size: 0.75rem;
  letter-spacing: 0.4px;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  line-height: 1.66;
  color: #777777;
}

.emotion-17 {
  fill: none;
  width: 16px;
  padding: 5.6px 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: visible;
}

.emotion-17:hover {
  cursor: pointer;
}

.emotion-18 {
  margin: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0;
  border-style: solid;
  border-color: #E8E8E8;
  border-bottom-width: thin;
  margin: 8px 32.8px 8px 16px;
  background-color: #34383E;
}

.emotion-19 {
  width: 232px;
  height: 28px;
  border: 1px solid;
  border-color: #000000;
  border-radius: 1000px;
  margin-left: 24px;
}

.emotion-19:hover {
  cursor: pointer;
  background: #A1A1A1;
}

.emotion-20 {
  color: #000000;
  text-align: center;
}

.emotion-21 {
  height: 16px;
  width: 16px;
  background-color: #000000;
  border-radius: 50px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: 4px;
  margin-left: 8px;
  vertical-align: middle;
}

.emotion-22 {
  vertical-align: middle;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: 5.6px;
  margin-left: 4px;
  font-size: 12px;
  line-height: 14px;
  font-weight: 400;
  color: #222222;
}

.emotion-23 {
  height: 46px;
  border-radius: 8px;
  background-color: #BDBDBD;
  margin-top: 20.8px;
}

.emotion-23:hover {
  cursor: pointer;
  background: #A1A1A1;
}

.emotion-24 {
  padding: 12px 24px;
  font-size: 16px;
  font-weight: 590;
  line-height: 20px;
  color: #222222;
}

.emotion-25 {
  margin: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0;
  border-style: solid;
  border-color: #E8E8E8;
  border-bottom-width: thin;
  margin: 20px 0px 14.4px 0px;
  background-color: #34383E;
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-27 {
  border: 1px solid;
  border-color: #222222;
  border-radius: 24px;
  text-align: center;
  width: 112px;
}

.emotion-27:hover {
  cursor: pointer;
  background: #BDBDBD;
}

.emotion-27 svg {
  fill: none;
  color: #222222;
}

.emotion-28 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
}

.emotion-29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  vertical-align: middle;
  width: 16px;
  stroke: #222222;
  stroke-width: 1.6;
  stroke-linecap: round;
  stroke-linejoin: round;
  margin-right: 4px;
}

.emotion-30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  vertical-align: middle;
  padding-top: 6.4px;
  font-weight: 590;
  color: #222222;
}

.emotion-31 {
  margin-left: 20px;
}

@media (min-width:1280px) {
  .emotion-31 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    text-align: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
  }
}

.emotion-31:hover {
  cursor: pointer;
}

.emotion-31 svg {
  fill: none;
  stroke: #999999;
  stroke-width: 1.6;
  stroke-linecap: round;
  stroke-linejoin: round;
}

.emotion-32 {
  width: 100%;
  z-index: 1201;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  position: fixed;
  top: 0;
  left: 0;
}

.emotion-32.open {
  opacity: 1;
  visibility: visible;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <form
      className="open emotion-2"
      onSubmit={[Function]}
    >
      <div
        className="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-adornedStart emotion-3"
        onClick={[Function]}
      >
        <div
          className="MuiInputAdornment-root MuiInputAdornment-positionStart emotion-4"
        >
          <span
            className="notranslate"
          >
            ​
          </span>
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-5"
            color="#999999"
            data-testid="SearchIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
        </div>
        <input
          aria-label="searchBarPlaceholderDtag"
          className="MuiInputBase-input MuiInputBase-inputAdornedStart emotion-6"
          onAnimationStart={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder="searchBarPlaceholderDtag"
          type="text"
          value=""
        />
      </div>
    </form>
    <div
      className="emotion-7 open"
      id="network"
      toggleNetwork={[MockFunction]}
    />
    <div
      onClick={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        aria-label="wallet-details-button"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      />
      <div
        className="emotion-8"
      >
        <div
          className="emotion-9"
        >
          <div
            className="emotion-10"
          >
            <div
              className="emotion-11"
            >
              <div
                className="emotion-12"
              >
                <svg
                  data-jdenticon-value=""
                  height="100%"
                  width="100%"
                />
              </div>
              <div
                className="emotion-13"
              />
              <div
                className="emotion-14"
              />
            </div>
            <div
              className="emotion-15"
            >
              <div>
                <span
                  className="MuiTypography-root MuiTypography-caption emotion-16"
                />
                <svg
                  className="emotion-17"
                  onClick={[Function]}
                />
              </div>
            </div>
          </div>
          <hr
            className="MuiDivider-root MuiDivider-fullWidth emotion-18"
          />
          <div
            aria-label="account-details-button"
            className="emotion-19"
            role="button"
            tabIndex={0}
          >
            <a
              href="/accounts"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="emotion-20"
              >
                <div
                  className="emotion-21"
                />
                <div
                  className="emotion-22"
                >
                  common:accountDetails
                </div>
              </div>
            </a>
          </div>
        </div>
        <div
          aria-label="change-wallet-button"
          className="emotion-23"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="emotion-24"
          >
            common:changeWallet
          </div>
        </div>
        <hr
          className="MuiDivider-root MuiDivider-fullWidth emotion-25"
        />
        <div
          className="emotion-26"
        >
          <div
            aria-label="sign-out-button"
            className="emotion-27"
            onClick={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="emotion-28"
            >
              <svg
                className="emotion-29"
              />
              <div
                className="emotion-30"
              >
                common:signOut
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      id="SettingsList"
    />
    <div>
      <div
        aria-label="connect-wallet-button"
        className="emotion-31"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <svg />
      </div>
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
    </div>
  </div>
  <div
    actionHeight={0}
    className="emotion-32 open"
    id="NetworkList"
  />
</div>
`;

exports[`screen: Nav/ActionBar it renders 1`] = `
.emotion-0 {
  width: 100%;
  background: #F8F8F8;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 24px;
}

.emotion-1 {
  width: 70%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  z-index: 5000;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-right: 16px;
}

.emotion-2 .MuiInputBase-root {
  width: 100%;
  background: #FFFFFF;
  padding: 3.2px 9.6px;
  border-radius: 4px;
}

.emotion-2 .MuiInputBase-input {
  text-overflow: ellipsis;
}

.emotion-2 .MuiInputBase-input::-webkit-input-placeholder {
  color: #999999;
}

.emotion-2 .MuiInputBase-input::-moz-placeholder {
  color: #999999;
}

.emotion-2 .MuiInputBase-input:-ms-input-placeholder {
  color: #999999;
}

.emotion-2 .MuiInputBase-input::placeholder {
  color: #999999;
}

.emotion-2.open .MuiInputBase-root {
  background: #F8F8F8;
}

.emotion-3 {
  font-size: 1rem;
  white-space: pre-wrap;
  letter-spacing: 0.5px;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  line-height: 1.4375em;
  color: #000000;
  box-sizing: border-box;
  position: relative;
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3.Mui-disabled {
  color: rgba(0, 0, 0, 0.38);
  cursor: default;
}

.emotion-3 {
  border-radius: 12px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 0.01em;
  max-height: 2em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: rgba(0, 0, 0, 0.54);
  margin-right: 8px;
}

.emotion-5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.25rem;
}

.emotion-6 {
  font: inherit;
  letter-spacing: inherit;
  color: currentColor;
  padding: 4px 0 5px;
  border: 0;
  box-sizing: content-box;
  background: none;
  height: 1.4375em;
  margin: 0;
  -webkit-tap-highlight-color: transparent;
  display: block;
  min-width: 0;
  width: 100%;
  -webkit-animation-name: mui-auto-fill-cancel;
  animation-name: mui-auto-fill-cancel;
  -webkit-animation-duration: 10ms;
  animation-duration: 10ms;
}

.emotion-6::-webkit-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-6::-moz-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-6:-ms-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-6::-ms-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-6:focus {
  outline: 0;
}

.emotion-6:invalid {
  box-shadow: none;
}

.emotion-6::-webkit-search-decoration {
  -webkit-appearance: none;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-6::-webkit-input-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-6::-moz-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-6:-ms-input-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-6::-ms-input-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-6:focus::-webkit-input-placeholder {
  opacity: 0.42;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-6:focus::-moz-placeholder {
  opacity: 0.42;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-6:focus:-ms-input-placeholder {
  opacity: 0.42;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-6:focus::-ms-input-placeholder {
  opacity: 0.42;
}

.emotion-6.Mui-disabled {
  opacity: 1;
  -webkit-text-fill-color: rgba(0, 0, 0, 0.38);
}

.emotion-6:-webkit-autofill {
  -webkit-animation-duration: 5000s;
  animation-duration: 5000s;
  -webkit-animation-name: mui-auto-fill;
  animation-name: mui-auto-fill;
}

.emotion-6 {
  padding: 8px 12px;
}

.emotion-7 {
  margin-right: 16px;
}

.emotion-7.open {
  background: #F8F8F8;
}

.emotion-8 {
  opacity: 0;
  visibility: hidden;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  position: fixed;
  right: 60px;
  background: #E8E8E8;
  width: 310px;
  height: 310px;
  top: 69.6px;
  right: 55px;
  opacity: 20%;
  z-index: 1;
  border-radius: 8px;
  overflow: auto;
}

.emotion-8.emotion-8 {
  overflow: auto;
  padding: 16px;
  border-radius: 4px;
  background: #FFFFFF;
}

.emotion-8.open {
  opacity: 1;
  visibility: visible;
  background: #E8E8E8;
  border-radius: 8px;
}

@media (min-width:1280px) {
  .emotion-8 {
    right: 120px;
  }
}

.emotion-9 {
  height: 124px;
  border-radius: 8px;
  background-color: #E8E7E8;
  margin-top: 8px;
}

.emotion-10 {
  vertical-align: middle;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-11 {
  padding: 16px 0px 0px 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-12 {
  width: 28px;
  height: 28px;
  min-width: 28px;
  min-height: 28px;
  border-radius: 50%;
  overflow: hidden;
  background: #F8F8F8;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 45px;
  width: 45px;
}

.emotion-12 img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center center;
}

.emotion-13 {
  height: 12.4px;
  width: 12.4px;
  background-color: #E8E7E8;
  border-radius: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  left: 73px;
  top: 38px;
}

.emotion-14 {
  height: 10.4px;
  width: 10.4px;
  background-color: #29CC6A;
  border-radius: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  left: 74px;
  top: 39px;
}

.emotion-15 {
  padding: 20px 0px 0px 8px;
  font-size: 14px;
  font-weight: 590;
  line-height: 17px;
  color: #000000;
  overflow: auto;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow-wrap: anywhere;
  max-height: 70px;
}

.emotion-16 {
  margin: 0;
  font-size: 0.75rem;
  letter-spacing: 0.4px;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  line-height: 1.66;
  color: #777777;
}

.emotion-17 {
  fill: none;
  width: 16px;
  padding: 5.6px 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: visible;
}

.emotion-17:hover {
  cursor: pointer;
}

.emotion-18 {
  margin: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0;
  border-style: solid;
  border-color: #E8E8E8;
  border-bottom-width: thin;
  margin: 8px 32.8px 8px 16px;
  background-color: #34383E;
}

.emotion-19 {
  width: 232px;
  height: 28px;
  border: 1px solid;
  border-color: #000000;
  border-radius: 1000px;
  margin-left: 24px;
}

.emotion-19:hover {
  cursor: pointer;
  background: #A1A1A1;
}

.emotion-20 {
  color: #000000;
  text-align: center;
}

.emotion-21 {
  height: 16px;
  width: 16px;
  background-color: #000000;
  border-radius: 50px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: 4px;
  margin-left: 8px;
  vertical-align: middle;
}

.emotion-22 {
  vertical-align: middle;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: 5.6px;
  margin-left: 4px;
  font-size: 12px;
  line-height: 14px;
  font-weight: 400;
  color: #222222;
}

.emotion-23 {
  height: 46px;
  border-radius: 8px;
  background-color: #BDBDBD;
  margin-top: 20.8px;
}

.emotion-23:hover {
  cursor: pointer;
  background: #A1A1A1;
}

.emotion-24 {
  padding: 12px 24px;
  font-size: 16px;
  font-weight: 590;
  line-height: 20px;
  color: #222222;
}

.emotion-25 {
  margin: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0;
  border-style: solid;
  border-color: #E8E8E8;
  border-bottom-width: thin;
  margin: 20px 0px 14.4px 0px;
  background-color: #34383E;
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-27 {
  border: 1px solid;
  border-color: #222222;
  border-radius: 24px;
  text-align: center;
  width: 112px;
}

.emotion-27:hover {
  cursor: pointer;
  background: #BDBDBD;
}

.emotion-27 svg {
  fill: none;
  color: #222222;
}

.emotion-28 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
}

.emotion-29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  vertical-align: middle;
  width: 16px;
  stroke: #222222;
  stroke-width: 1.6;
  stroke-linecap: round;
  stroke-linejoin: round;
  margin-right: 4px;
}

.emotion-30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  vertical-align: middle;
  padding-top: 6.4px;
  font-weight: 590;
  color: #222222;
}

.emotion-31 {
  margin-left: 20px;
}

@media (min-width:1280px) {
  .emotion-31 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    text-align: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
  }
}

.emotion-31:hover {
  cursor: pointer;
}

.emotion-31 svg {
  fill: none;
  stroke: #999999;
  stroke-width: 1.6;
  stroke-linecap: round;
  stroke-linejoin: round;
}

.emotion-32 {
  width: 100%;
  z-index: 1201;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  position: fixed;
  top: 0;
  left: 0;
}

.emotion-32.open {
  opacity: 1;
  visibility: visible;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <form
      className="emotion-2"
      onSubmit={[Function]}
    >
      <div
        className="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-adornedStart emotion-3"
        onClick={[Function]}
      >
        <div
          className="MuiInputAdornment-root MuiInputAdornment-positionStart emotion-4"
        >
          <span
            className="notranslate"
          >
            ​
          </span>
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-5"
            color="#999999"
            data-testid="SearchIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
        </div>
        <input
          aria-label="searchBarPlaceholderDtag"
          className="MuiInputBase-input MuiInputBase-inputAdornedStart emotion-6"
          onAnimationStart={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder="searchBarPlaceholderDtag"
          type="text"
          value=""
        />
      </div>
    </form>
    <div
      className="emotion-7"
      id="network"
      toggleNetwork={[MockFunction]}
    />
    <div
      onClick={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        aria-label="wallet-details-button"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      />
      <div
        className="emotion-8"
      >
        <div
          className="emotion-9"
        >
          <div
            className="emotion-10"
          >
            <div
              className="emotion-11"
            >
              <div
                className="emotion-12"
              >
                <svg
                  data-jdenticon-value=""
                  height="100%"
                  width="100%"
                />
              </div>
              <div
                className="emotion-13"
              />
              <div
                className="emotion-14"
              />
            </div>
            <div
              className="emotion-15"
            >
              <div>
                <span
                  className="MuiTypography-root MuiTypography-caption emotion-16"
                />
                <svg
                  className="emotion-17"
                  onClick={[Function]}
                />
              </div>
            </div>
          </div>
          <hr
            className="MuiDivider-root MuiDivider-fullWidth emotion-18"
          />
          <div
            aria-label="account-details-button"
            className="emotion-19"
            role="button"
            tabIndex={0}
          >
            <a
              href="/accounts"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="emotion-20"
              >
                <div
                  className="emotion-21"
                />
                <div
                  className="emotion-22"
                >
                  common:accountDetails
                </div>
              </div>
            </a>
          </div>
        </div>
        <div
          aria-label="change-wallet-button"
          className="emotion-23"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="emotion-24"
          >
            common:changeWallet
          </div>
        </div>
        <hr
          className="MuiDivider-root MuiDivider-fullWidth emotion-25"
        />
        <div
          className="emotion-26"
        >
          <div
            aria-label="sign-out-button"
            className="emotion-27"
            onClick={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="emotion-28"
            >
              <svg
                className="emotion-29"
              />
              <div
                className="emotion-30"
              >
                common:signOut
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      id="SettingsList"
    />
    <div>
      <div
        aria-label="connect-wallet-button"
        className="emotion-31"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <svg />
      </div>
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
    </div>
  </div>
  <div
    actionHeight={0}
    className="emotion-32"
    id="NetworkList"
  />
</div>
`;
